--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 
-Assets/Resources
+Assets/Sound
+
+Assets/GoogleMobileAds
+
+Assets/PlayServicesResolver
+
+Assets/Plugins
 
 Library
+
+Key.keystore
